# lsm-rs

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
lsm-rs/: Cargo.toml
lsm-rs-common/: Cargo.toml
lsm-rs-common/src/: lib.rs
lsm-rs-ebpf/: Cargo.toml
lsm-rs-ebpf/src/: main.rs  vmlinux.rs
lsm-rs/src/: main.rs
xtask/src/: build_ebpf.rs  main.rs  run.rs
