[package]
name = "lsm-rs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
lsm-rs-common = { path = "../lsm-rs-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
bytes = "1"
serde_json = "1.0.110"
users = "0.11.0"

[[bin]]
name = "lsm-rs"
path = "src/main.rs"
